mcpagentcontrolplane/agent-gateway-policy.yml
apiVersion: v1
kind: Service
metadata:
  name: azure-ad-jwks
spec:
  type: ExternalName
  externalName: login.microsoftonline.com
