mcpagentcontrolplane/mcp-gateway-proxy.yml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: agentgateway
  namespace: test
  labels:
    app: agentgateway
spec:
  gatewayClassName: agentgateway-proxy
  listeners:
  - protocol: HTTP
    port: 8080
    name: http
    allowedRoutes:
      namespaces:
        from: All
